[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipymafs"
version = "0.0.6"
dependencies = [
    "anywidget"
]

[project.optional-dependencies]
dev = [
    "watchfiles",
    "jupyterlab"
]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build]
artifacts = ["src/ipymafs/widget.js"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipymafs/widget.js"]
skip-if-exists = ["src/ipymafs/widget.js"]
ensured-targets = ["src/ipymafs/widget.css"]
skip-if-exists = ["src/ipymafs/widget.css"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
path = "."
