[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipymafs"
version = "0.1.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "anywidget"
]

[project.optional-dependencies]
dev = [
    "watchfiles",
    "jupyterlab"
]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build]
artifacts = ["src/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
path = "."